syntax = "proto3";

package catalog;

service CatalogService {
  rpc ValidateProducts (ValidationRequest) returns (ValidationResponse);
}

message ValidationRequest {
  int32 restaurant_id = 1;
  repeated ProductItem products = 2;
}

message ProductItem {
  int32 product_id = 1;
  double expected_price = 2;
  int32 quantity = 3;
}

message ValidationResponse {
  bool valid = 1;
  string message = 2;
  repeated string errors = 3;
}
